# make-your-own-neural-network

./: .gitignore  Cargo.toml  README.md  build.sh  run.sh
.github/workflows/: main.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/logic/: backpropagation.rs  feedforward.rs  mod.rs
core/src/matrix/: matrix.rs  mod.rs  operators.rs
core/src/neuralnetwork/: layer.rs  mod.rs  neuralnetwork.rs
example-usage/: Cargo.toml
example-usage/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/logic/: mod.rs
lib/src/matrix/: matrix.rs
lib/src/neuralnetwork/: errorrate.rs  mod.rs  neuralnetwork.rs  query.rs  training.rs
mnist-dataset/: LICENSE  README.md
pre-trained-nn/: pre-trained-nn.txt
src/: lib.rs  main.rs
src/logic/: backpropagation.rs  feedforward.rs
src/matrix/: matrix.rs  mod.rs  operators.rs
src/neuralnetwork/: layer.rs  mod.rs  neuralnetwork.rs
wasm/: Cargo.toml
wasm/src/: api.rs  base64_png.rs  console.rs  files.rs  frontend_validation.rs  image.rs  lib.rs  mnist_image.rs  neuralnetwork.rs  neuralnetwork_image.rs
www/: canvas.js  example-nn.txt  form.js  guess.css  guess.html  guess.js  index.css  index.html  index.js  train-nn.css  train-nn.html  train-nn.js  wasm.js
www/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
