[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
anyhow = "1.0.68"
serde = { version = "1.0.183", features = ["derive"] }